// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`condition handles code branching 1`] = `
",  write input a
[->>+>+<<<]>>[-<<+>>]  copy a to temporary〔3〕
>[  if a
  <<+++++  increment b with 5
>>[-]]  endif a
<<.  print b
<.  print a"
`;

exports[`condition handles if/else branching 1`] = `
",  write input a
[->>+>+<<<]>>[-<<+>>]  copy a to temporary〔3〕
+>[  if a
  <<+++++  increment b with 5
>>[-]<->]<[  else a
  <++++++++++  increment b with 10
>-]  endif a
<.  print b
<.  print a"
`;
